<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddMeetingActivity"
    android:background="@android:color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbar_tb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
            <Button
                android:id="@+id/btn_save_meeting"
                android:layout_gravity="end"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="22dp"
                android:layout_marginTop="6dp"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="6dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/my_button"
                android:textSize="14sp"
                android:text="Enregistrer"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                />

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/edtxt_meeting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="55dp"
        android:background="@android:color/transparent"
        android:hint="Ajouter un titre"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbar_tb" />

    <ImageView
        android:id="@+id/img_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_time"
        app:layout_constraintBottom_toBottomOf="@+id/txt_start_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_start_date" />

    <ImageView
        android:id="@+id/img_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_people"
        app:layout_constraintBottom_toBottomOf="@+id/txt_contacts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_contacts" />

    <ImageView
        android:id="@+id/img_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="@+id/txt_room"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_room" />


    <TextView
        android:id="@+id/txt_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="12/09/2019"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/edtxt_meeting_title"
        app:layout_constraintTop_toBottomOf="@+id/divider_1" />

    <TextView
        android:id="@+id/txt_stop_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="12/09/2019"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/edtxt_meeting_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_start_date" />


    <TextView
        android:id="@+id/txt_contacts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Ajouter des participants"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/edtxt_meeting_title"
        app:layout_constraintStart_toStartOf="@+id/edtxt_meeting_title"
        app:layout_constraintTop_toBottomOf="@+id/divider_2" />

    <TextView
        android:id="@+id/txt_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="Ajouter une salle de réunion"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/edtxt_meeting_title"
        app:layout_constraintStart_toStartOf="@+id/edtxt_meeting_title"
        app:layout_constraintTop_toBottomOf="@+id/divider_3" />


    <TextView
        android:id="@+id/txt_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="09:30"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_start_date"
        app:layout_constraintEnd_toEndOf="@+id/edtxt_meeting_title"
        app:layout_constraintTop_toTopOf="@+id/txt_start_date"/>

    <TextView
        android:id="@+id/txt_stop_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10:30"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_stop_date"
        app:layout_constraintEnd_toEndOf="@+id/edtxt_meeting_title"
        app:layout_constraintTop_toTopOf="@+id/txt_stop_date"/>


    <View
        android:id="@+id/divider_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_meeting_title" />

    <View
        android:id="@+id/divider_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/txt_contacts" />

    <View
        android:id="@+id/divider_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/txt_stop_date" />

    <View
        android:id="@+id/divider_4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/txt_room" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_contacts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/divider_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider_2" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_location"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/divider_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider_3" />

</androidx.constraintlayout.widget.ConstraintLayout>

