...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".view.ListContactsActivity">

    <EditText
        android:id="@+id/edtxt_add_contact"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:hint="@string/edittext_hint"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbar_tb_contatcs_activity" />

    <TextView
        android:id="@+id/txt_add_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:background="@drawable/my_button"
        android:gravity="center"
        android:paddingVertical="3dp"
...
